--- a/2022/Chat_class2/css/style.css
+++ b/2022/Chat_class2/css/style.css
@@ -53,6 +53,7 @@ body {
 }
 
 .bubble {
+  position: relative;
   display: flex;
   font-family: sans-serif;
   font-size: 3rem;
@@ -67,4 +68,31 @@ body {
   position: relative;
   float: right;
   background-color: lightgreen;
+}
+
+.bubble.right:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  z-index: 1;
+  border-style: solid;
+  border-width: 40px 0 0 40px;
+  border-color: transparent transparent transparent lightgreen;
+  top: 81%;
+  right: -8px;
+  margin-top: -30px;
+}
+.bubble.left:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  z-index: 1;
+  border-style: solid;
+  border-width: 0 0 40px 40px;
+  border-color: transparent transparent lightskyblue transparent;
+  top: 81%;
+  left: -7px;
+  margin-top: -26px;
 }
