--- a/2021/template/index.html
+++ b/2021/template/index.html
@@ -1,12 +1,18 @@
 <html>
   <head>
-    <script src="js/App.js"></script>
     <style>
       body {
         margin: 0;
         padding: 0;
       }
     </style>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-database.js"></script>
+
+    <script src="config/config.js" type="text/javascript"></script>
+    <script src="js/Button.js"></script>
+    <script src="js/App.js"></script>
   </head>
   <body></body>
 </html>
